# theseus

./: ChangeLog.md  README.md  theseus.cabal
src/Data/: Theseus.hs
src/Data/Theseus/: Values.hs
test/: propTests.hs
utils/: comparison.hs  propTests.hs
utils/Data/Theseus/: SampleTypes.hs
