name:                theseus
version:             0.1.0
synopsis:            Generics-based efficient binary serialisation/deserialisation
description:         Store data without needing to explicitly define how to do so.
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
copyright:           Ivan Lazar Miljenovic, Patryk Zadarnowski
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

tested-with:         GHC == 7.10.2, GHC == 8.0.1, GHC == 8.1.*

source-repository head
    type:         git
    location:     https://github.com/ivan-m/theseus.git

library
  exposed-modules:     Data.Theseus
                     , Data.Theseus.Values
  build-depends:       base >=4.8 && <4.11
                     , bytestring
                     , storable-endian >= 0.2.6 && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall

test-suite properties
  type:                exitcode-stdio-1.0
  main-is:             propTests.hs
  build-depends:       theseus
                     , base
                     , bytestring
                     , hspec >= 2.1 && < 2.4
                     , QuickCheck >= 2.5 && < 2.10
                     , quickcheck-instances
                     , storable-endian
  hs-source-dirs:      test
  default-language:    Haskell2010

  ghc-options:         -Wall
